# cargo-depsize

./: .gitignore  Cargo.toml  RAEDME.md  README.md
src/: main.rs
