[package]
name = "cargo-depsize"
version = "1.0.0"
edition = "2021"
authors = ["Seok Won Choi <ikr@kakao.com>"]
license = "MIT"
description = "a Rust cargo utility that calculates and displays the total size of each dependency in your Rust project."
repository = "https://github.com/Alfex4936/cargo-depsize"

[dependencies]
anyhow = "1.0"
cargo = "0.69"
ignore = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
