[package]
name = "cargo-depsize"
version = "1.0.2"
edition = "2021"
authors = ["Seok Won Choi <ikr@kakao.com>"]
license = "MIT"
description = "Rust cargo utility that calculates and displays the total size of each dependency in your Rust project."
repository = "https://github.com/Alfex4936/cargo-depsize"
categories = ["dependencies", "cargo", "cargo-util"]

[dependencies]
anyhow = "1.0"
cargo = "0.83"
ignore = "0.4.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
